build: basic Goreleaser + Github Actions setup
* minimal Goreleaser boilerplate
* minimal Github Actions boilerplate
* move `schroff` to top level and rename it (`go build` works now!)
* fate of `panelgen` to be determined later, but it's still there+usable
* README updates

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
-/schroff
+# current binaries
 /panelgen
+/go-eagle
+
+# in case someone has this lying around in a repo still
+/schroff
+
+# goreleaser
+/dist
 
 # Eagle .brd board files and .b## backup files
 *.b*
